--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body>
     <div class="container">
         <h1 class="container_title"> Etwinnig 2021-2022</h1>
-        
+        <img src="./images/">
+        <h2 class="container_title_sub">Autor: José Rubicco</h2>
+
     </div>
   </body>
 </html>
